@@ -1,3 +1,8 @@
+Sun Feb  6 12:18:25 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* parse.y (words, qwords): dispatch array events.  based on a
+	  patch from Michael Edgar.  [Bug #4365].
+
 Sat Feb  5 21:47:09 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* parse.y (mlhs_basic): include mlhs_post for ripper.  a patch
